--- a/public/index.html
+++ b/public/index.html
@@ -9,7 +9,7 @@
       name="description"
       content="COVID-19 infection impact estimation tool"
     />
-    <link rel="preload" href="https://storage.googleapis.com">
+    <link rel="preload" href="https://storage.googleapis.com" />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
